// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no line that includes another exist 1`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 2`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 3`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 4`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 5`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 6`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 7`] = `undefined`;

exports[`returns "undefined" if no line that includes another exist 8`] = `undefined`;

exports[`selects line that includes another 1`] = `1`;

exports[`selects line that includes another 2`] = `
{🟥} {🟥} {🟦} {🟦}
[⬜] [⬜] [⬜] [⬜]
{🟥} {⬜} {⬜} {🟦}
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 3`] = `1`;

exports[`selects line that includes another 4`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦}
[⬜] [⬜] [⬜] [⬜]
{🟥} {⬜} {⬜} {🟦}
`;

exports[`selects line that includes another 5`] = `1`;

exports[`selects line that includes another 6`] = `
{🟥} {⬜} {⬜} {🟦}
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦}
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 7`] = `1`;

exports[`selects line that includes another 8`] = `
[⬜] [⬜] [⬜] [⬜]
{🟥} {⬜} {⬜} {🟦}
[⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦}
`;

exports[`selects line that includes another 9`] = `0`;

exports[`selects line that includes another 10`] = `
{🟥} [⬜] {🟥} [⬜]
{🟥} [⬜] {⬜} [⬜]
{🟦} [⬜] {⬜} [⬜]
{🟦} [⬜] {🟦} [⬜]
`;

exports[`selects line that includes another 11`] = `0`;

exports[`selects line that includes another 12`] = `
[⬜] {🟥} [⬜] {🟥}
[⬜] {🟥} [⬜] {⬜}
[⬜] {🟦} [⬜] {⬜}
[⬜] {🟦} [⬜] {🟦}
`;

exports[`selects line that includes another 13`] = `0`;

exports[`selects line that includes another 14`] = `
{🟥} [⬜] {🟥} [⬜]
{⬜} [⬜] {🟥} [⬜]
{⬜} [⬜] {🟦} [⬜]
{🟦} [⬜] {🟦} [⬜]
`;

exports[`selects line that includes another 15`] = `0`;

exports[`selects line that includes another 16`] = `
[⬜] {🟥} [⬜] {🟥}
[⬜] {⬜} [⬜] {🟥}
[⬜] {⬜} [⬜] {🟦}
[⬜] {🟦} [⬜] {🟦}
`;

exports[`selects line that includes another 17`] = `1`;

exports[`selects line that includes another 18`] = `
{🟥} {🟥} {🟦} {🟦} {🟥} {🟦}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {⬜} {⬜}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 19`] = `1`;

exports[`selects line that includes another 20`] = `
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {🟥} {🟦}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {⬜} {⬜}
`;

exports[`selects line that includes another 21`] = `1`;

exports[`selects line that includes another 22`] = `
{🟥} {🟥} {🟦} {🟦} {⬜} {⬜}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {🟥} {🟦}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 23`] = `1`;

exports[`selects line that includes another 24`] = `
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {⬜} {⬜}
[⬜] [⬜] [⬜] [⬜] [⬜] [⬜]
{🟥} {🟥} {🟦} {🟦} {🟥} {🟦}
`;

exports[`selects line that includes another 25`] = `0`;

exports[`selects line that includes another 26`] = `
{🟥} [⬜] {🟥} [⬜] [⬜] [⬜]
{🟥} [⬜] {🟥} [⬜] [⬜] [⬜]
{🟦} [⬜] {🟦} [⬜] [⬜] [⬜]
{🟦} [⬜] {🟦} [⬜] [⬜] [⬜]
{🟥} [⬜] {⬜} [⬜] [⬜] [⬜]
{🟦} [⬜] {⬜} [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 27`] = `0`;

exports[`selects line that includes another 28`] = `
[⬜] [⬜] [⬜] {🟥} [⬜] {🟥}
[⬜] [⬜] [⬜] {🟥} [⬜] {🟥}
[⬜] [⬜] [⬜] {🟦} [⬜] {🟦}
[⬜] [⬜] [⬜] {🟦} [⬜] {🟦}
[⬜] [⬜] [⬜] {🟥} [⬜] {⬜}
[⬜] [⬜] [⬜] {🟦} [⬜] {⬜}
`;

exports[`selects line that includes another 29`] = `0`;

exports[`selects line that includes another 30`] = `
{🟥} [⬜] {🟥} [⬜] [⬜] [⬜]
{🟥} [⬜] {🟥} [⬜] [⬜] [⬜]
{🟦} [⬜] {🟦} [⬜] [⬜] [⬜]
{🟦} [⬜] {🟦} [⬜] [⬜] [⬜]
{⬜} [⬜] {🟥} [⬜] [⬜] [⬜]
{⬜} [⬜] {🟦} [⬜] [⬜] [⬜]
`;

exports[`selects line that includes another 31`] = `0`;

exports[`selects line that includes another 32`] = `
[⬜] [⬜] [⬜] {🟥} [⬜] {🟥}
[⬜] [⬜] [⬜] {🟥} [⬜] {🟥}
[⬜] [⬜] [⬜] {🟦} [⬜] {🟦}
[⬜] [⬜] [⬜] {🟦} [⬜] {🟦}
[⬜] [⬜] [⬜] {⬜} [⬜] {🟥}
[⬜] [⬜] [⬜] {⬜} [⬜] {🟦}
`;
